# era-open-core

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ERA_POC.ipynb  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: concepts.yaml  probes.yaml
docs/: methodology.md
examples/configs/: demo_hf.yaml  demo_openai.yaml
examples/notebooks/: ERA_demo.ipynb
examples/run/: make_report.sh  run_demo_hf.sh
src/era/: cli.py  concept_library.py  csi.py  embeddings.py  lineage.py  metrics.py  pipeline.py  report.py
src/era/probers/: anthropic.py  hf.py  openai.py
tests/: test_csi.py
